2010-07-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the `mandel' benchmark.

	* benchmarks/mandel/mandel.c: Allocate the exclusive place using
	the new interface. Fix support for `DISPLAY_DURING_COMPUTE &&
	!PARALLEL_DISPLAY'. Use a continuation create. Indirect the
	creation of work through an intermediary function to work around
	the delegated-family-becomes-local feature of the Microgrid.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix LL10 benchmark.

	* benchmarks/livermore/kernel10.c: Properly use `dim1' for the 2nd
	array dimension.
	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix upper bound for PX.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update handling of statistics.

	* benchmarks/lib/benchmark.c: Ensure that measurements for the
	work stage are made at the target place.

2010-06-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use exclusive creates in benchmarks.

	* benchmarks/lib/benchmark.c,
	* benchmarks/mandel/mandel.c: Do it.

2010-06-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `sep' demo.

	* demo/sep.c: Test more combinations of policies. Also test
	allocation of shared and exclusive places. Use exclusive creates
	for allocations/deallocations.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `tmalloc' demo.

	* demo/tmalloc.c: `mallinfo' -> `mstat' (more accurate).

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.

	* programs/benchmarks/sha/sha1.c,
	* programs/benchmarks/sha/sha1_alt.c: Use the standard C `assert'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `tmalloc' demo for memory allocation.

	* demo/tmalloc.c: New.
	* demo/Makefile.am: Update accordingly.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update check expectations.
	
	* benchmarks/sha/sha1_alt.c: Expect failure for naked mta targets.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>
